<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:columnCount="7"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="1"
    tools:context=".Tutorial" >

    <TextView
        android:id="@+id/tutorialText1"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/tutorial1" />

    <TextView
        android:id="@+id/tutorialText2"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_column="3"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/tutorial2" />

    <ImageView
        android:id="@+id/tutorialView3"
        android:layout_column="4"
        android:layout_gravity="center"
        android:layout_row="0"
        android:src="@drawable/feet_swipe_bm" />

    <TextView
        android:id="@+id/tutorialText3"
        android:layout_width="186dp"
        android:layout_height="match_parent"
        android:layout_column="5"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/tutorial3" />
        
    <TextView
        android:id="@+id/tutorialText4"
        android:layout_width="306dp"
        android:layout_height="match_parent"
        android:layout_column="6"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/tutorial4" />

    <ImageView
        android:id="@+id/tutorialView1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:src="@drawable/feet_swipe_bm" />

    <ImageView
        android:id="@+id/tutorialView2"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_row="0"
        android:src="@drawable/feet_swipe_bm" />

</GridLayout>